fix architecture and add verify email
