# internal/domain/response.go
@@ -1,10 +1,0 @@
-package domain
-
-type SuccessResponse struct {
-	Message string `json:"message"`
-}
-
-type ErrorResponse struct {
-	Code    int    `json:"code"`
-	Message string `json:"message"`
-}
